Fix - wordwrap on error notification

--- a/assets/css/everest-forms.scss
+++ b/assets/css/everest-forms.scss
@@ -152,6 +152,7 @@
 					&.everest-forms-invalid {
 						label {
 							color: $color-alert-danger;
+							white-space: nowrap;
 						}
 
 						.select2-container,
